--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 [project]
 name = "CIBPablopyPacket"
-version = "0.0.1"
+version = "0.0.2.1"
 authors = [
 { name="Pablo Gimeno Hermán", email="pgimher@upv.edu.es" },
 ]
@@ -16,5 +16,5 @@ classifiers = [
 "Operating System :: OS Independent",
 ]
 [project.urls]
-Homepage = "https://github.com/pypa/CIBProject"
-Issues = "https://github.com/pypa/CIBProject/issues"
+Homepage = "https://github.com/p4bloOS/paquete-cib-pablopy.git"
+Issues = "https://github.com/p4bloOS/paquete-cib-pablopy/issues"
